--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Creative inc .logo" class="logo">
+        <img src="img/logo.png" alt="Creative inc .logo" class="logo animated fadeInLeft">
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
@@ -21,10 +22,10 @@
 
     <section class="home-hero">
         <div class="container">
-        <h1 class="title">Making things look great
+        <h1 class="title animated zoomIn">Making things look great
             <span>for companies who make great stuff</span>
         </h1>
-        <a class="button button-accent" href="">See our work</a>
+        <a class="button button-accent animated fadeInDown" href="">See our work</a>
     </div>
     </section>
 
